// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly - colored - negative 1`] = `
<span
  className="pt-monospace-text"
  style={
    Object {
      "color": "#A82A2A",
    }
  }
>
  -1.24565986
   
  
</span>
`;

exports[`renders correctly - colored - positive 1`] = `
<span
  className="pt-monospace-text"
  style={
    Object {
      "color": "#0A6640",
    }
  }
>
  1.24565980
   
  
</span>
`;

exports[`renders correctly - percent 1`] = `
<span
  className="pt-monospace-text"
  style={
    Object {
      "color": "#A82A2A",
    }
  }
>
  -124.57
   
  %
</span>
`;

exports[`renders correctly - suffix, forceColor 1`] = `
<span
  className="pt-monospace-text"
  style={
    Object {
      "color": "#0E5A8A",
    }
  }
>
  -124.00
   
  yolo
</span>
`;

exports[`renders correctly - uncolored 1`] = `
<span
  className="pt-monospace-text"
  style={
    Object {
      "color": "#10161A",
    }
  }
>
  1.24565980
   
  
</span>
`;
